<resources>
    <string name="app_name">Smart elevator</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="choose_language">Choose language</string>
    <string name="you_arrive">You  have arrived your destination you can exit the app now :).</string>
    <string name="exit">Exit</string>
    <string name="elevator_is_moving">Elevator is moving ... stay safe :).</string>
    <string name="your_destination">Your destination: </string>
    <string name="where_to">Where to</string>
    <string name="start">Start</string>
    <string name="floor_number">Floor number</string>
    <string name="selected_you_can">selected you can start the elevator now :).</string>
    <string name="forget_password">Forget password</string>
    <string name="email">Email</string>
    <string name="send_email">Send email</string>
    <string name="login">Login</string>
    <string name="we_have_sent_link_to_your_email">We have sent link to your email</string>
    <string name="open_email">Open email</string>
    <string name="welcome_to_smart_elevator">Welcome to smart elevator, please login</string>
    <string name="password">Password</string>
    <string name="forget_password_2">Forget password...?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome">Welcome</string>
    <string name="enter_current_floor_number">Current floor number</string>
    <string name="next">Next</string>
    <string name="elevator_scanned_successfully_enter_current_floor_then_next">Elevator scanned successfully, enter current floor number then Next...</string>
    <string name="you_are_here">You are here</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_language">Change language</string>
    <string name="authinticationg">Authenticating...</string>
    <string name="please_wait_elevator_is_moving">Please wait the elevator is moving</string>
    <string name="starting">Starting...</string>
    <string name="sending_link">Sending link...</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="send_link_to">Send link to:</string>
    <string name="yes">Yes</string>
    <string name="please_enter_vaild_email">Please enter valid email</string>
    <string name="email_sent">Email sent successfully</string>
    <string name="no">No</string>
    <string name="resend_email">Resend email in:</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="loading">Loading...</string>
    <string name="enter_floot_number">Enter floor number and scan elevator qr</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="registring">Registering...</string>
    <string name="please_enter_vaild_phone">Please enter valid phone</string>
    <string name="please_enter_valid_pass">Please enter valid password</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="add_new_elevator">Add new elevator</string>
    <string name="elevator_code">Elevator Code(should be unique)</string>
    <string name="elevator_max_floor_20_30_40">Elevator max floor(20,30,40)</string>
    <string name="admin_code">Admin code</string>
    <string name="validate">Validate</string>
    <string name="enter_admin_code">Enter admin code</string>
    <string name="add">Add</string>
    <string name="please_fill_info">please fill required information</string>
    <string name="elevator_added">Elevator added successfully to database </string>
    <string name="this_qr_code">This qr code is not registered try again</string>
    <string name="first_floor_number">First floor number(0,-1,-2)</string>
    <string name="elevator_is_coming">Elevator is coming for you please wait, Elevator current floor: </string>
</resources>